# sales-agent-web-analysis

./: .gitignore  README.md  datafest.txt  oikko_sales_assistant_sequence.mermaid  pyproject.toml  tag.txt
.opencode/skill/: intent-engine.md
client/src/: element-map.js  tracking.js
dashboard/: index.html
dashboard/css/: style.css
dashboard/js/: app.js
examples/: nike.html
intent_module/: .env.example  CALCULATIONS.md  README.md  package-lock.json  package.json  vitest.config.ts
intent_module/scripts/: calibrate.ts
intent_module/src/: index.ts
intent_module/src/api/: auth.ts  replay.ts  sessions.ts
intent_module/src/config/: collectorConfig.ts  constants.ts  index.ts  infra.ts  lrTable.desktop.json  lrTable.mobile.json  signals.ts  thresholds.json  thresholds.ts
intent_module/src/pipeline/: index.ts
intent_module/src/pipeline/desktop/: curves.ts  fitts.ts  humanness.ts  signals.ts
intent_module/src/server/: routes.ts  shutdown.ts  ws.ts
intent_module/src/store/: outcomesRepo.ts  redisSession.ts
intent_module/src/tick/: ticker.ts
intent_module/src/types/: events.ts  geometry.ts  index.ts  session.ts
intent_module/src/ws/: connectionHandler.ts  disconnectHandler.ts  messageHandler.ts  viewportHandler.ts
intent_module/web/: dashboard.html  replay.html
intent_module/web/demo/: collector.js  index.html
legacy/: main.py
scripts/: run-server.sh
src/: app.py  config.py
src/api/: rest.py  ws.py
src/core/: classifier.py  sales_intent.py
src/models/: events.py
src/pipeline/: aggregator.py  enrichment.py
(+20 files in other folders)
